# deka-gst-wgpu

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
deka-gst-wgpu/: Cargo.toml
deka-gst-wgpu-plugins-image-processing/: Cargo.toml
deka-gst-wgpu-plugins-image-processing/src/: lib.rs  wgpu_buffer_download.rs  wgpu_buffer_upload.rs  wgpu_sobel_buf.rs  wgpu_sobel_mem.rs  wgpu_texture_copy.rs  wgpu_texture_download.rs  wgpu_texture_upload.rs
deka-gst-wgpu-plugins-image-processing/src/wgpu_buffer_download/: imp.rs
deka-gst-wgpu-plugins-image-processing/src/wgpu_buffer_upload/: imp.rs
deka-gst-wgpu-plugins-image-processing/src/wgpu_sobel_buf/: imp.rs
deka-gst-wgpu-plugins-image-processing/src/wgpu_sobel_mem/: imp.rs  shader.wgsl
deka-gst-wgpu/src/: buffer_memory.rs  caps.rs  context.rs  lib.rs  texture_memory.rs  texture_meta.rs
deka-gst-wgpu/src/caps/: transform.rs
